--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
+										<strong class="progress-label">Linux</strong>
+										<div class="progress progress-animated mb-9">
+											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
 									</div>
 									<div class="col-12 col-md-6">
 										<strong class="progress-label">C</strong>
@@ -143,6 +147,10 @@
 										<strong class="progress-label">CSS</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+										<strong class="progress-label">SQL</strong>
+										<div class="progress progress-animated mb-9">
+											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
