--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 	<script src="js/all.js"></script>
 	<script src="https://kit.fontawesome.com/75627516d7.js" crossorigin="anonymous"></script>
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MZ0SB6KT3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-2MZ0SB6KT3');
+	</script>
 
 	<title>Tanguy Dessoly | Web Resume</title>	
 </head>
