--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 	<script src="js/all.js"></script>
 	<script src="https://kit.fontawesome.com/75627516d7.js" crossorigin="anonymous"></script>
 	
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MZ0SB6KT3"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSQCXL9P93"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-2MZ0SB6KT3');
+	  gtag('config', 'G-YSQCXL9P93');
 	</script>
 
 	<title>Tanguy Dessoly | Web Resume</title>	
