--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="js/all.js"></script>
 	<script src="https://kit.fontawesome.com/75627516d7.js" crossorigin="anonymous"></script>
 	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="//static.getclicky.com/101343245.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSQCXL9P93"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
