--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="container-fluid-limited d-flex align-items-center justify-content-between">
 			<a href="" class="header-brand hidden-mobile"><h3 class="timeline-title">Tanguy Dessoly</h3></a>
 			<a href="CV.pdf" class="btn btn-primary hidden-mobile" download="DESSOLY Tanguy | CV">Download resume</a>
-			<!-- <img src="img/logo_b.svg" data-light-src="img/logo.svg" data-dark-src="img/logo_b.svg" alt="Your logo"> -->
+			<!-- <img src="img/logo_b.svg" data-light-src="img/logo.svg" data-dark-src="img/logo_b.svg"> -->
 			<button class="sections-nav-toggler" aria-label="Toggle navigation">
 				<span class="sections-nav-toggler-bar"></span>
 				<span class="sections-nav-toggler-bar"></span>
@@ -132,6 +132,10 @@
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
+										<strong class="progress-label">JSP</strong>
+										<div class="progress progress-animated mb-9">
+											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
 										<strong class="progress-label">HTML</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -153,6 +157,10 @@
 										<strong class="progress-label">Cobol</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+										<strong class="progress-label">GIT</strong>
+										<div class="progress progress-animated mb-9">
+											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 										<strong class="progress-label">CSS</strong>
 										<div class="progress progress-animated mb-9">
@@ -190,7 +198,7 @@
 									<br>
 									<div class="counter mb-6 mb-lg-0">
 										<span class="counter-label">German</span>
-										<span>REALLY BAD</span>
+										<span>RUDIMENTARY</span>
 									</div>
 								</div>
 							</div>
