--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<meta name="description" content="Tanguy Dessoly's Web Resume.">
-	<meta name="keywords" content="Tanguy, Dessoly, Informatique, Computer, Science, Développeur, Developer, CV, Resume, Étudiant, Student, Stage">
+	<meta name="keywords" content="Tanguy, Dessoly, Informatique, Computer, Science, Développeur, Developer, dev, CV, Resume, Étudiant, Student, Stage">
 	<meta name="author" content="Tanguy Dessoly">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -21,7 +21,6 @@
 	<script src="js/all.js"></script>
 	<script src="https://kit.fontawesome.com/75627516d7.js" crossorigin="anonymous"></script>
 	
-	<script async src="//static.getclicky.com/101343245.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSQCXL9P93"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -68,6 +67,9 @@
 				<a href="#section-10" class="nav-link sections-nav-link goto-section">Contact</a>
 			</li>
 			<li class="sections-nav-item">
+				<a href="CV.pdf" class="btn btn-primary hidden-computer" download="DESSOLY Tanguy | CV">Download<br>resume</a>
+			</li>
+			<li class="sections-nav-item">
 				<div class="sections-nav-info">
 					<a href="#section-11" class="goto-section"><i class="fa fa-envelope" aria-hidden="true"></i></a><br>
 					<a href="tel:+33695237569"><i class="fa fa-phone fa-flip-horizontal" aria-hidden="true"></i></a><br>
@@ -99,7 +101,7 @@
 								<div class="row">
 									<div class="col col-xl-10">
 										<h2 class="section-title animation-item-1">About me</h2>
-										<article class="article animation-translate animation-item-2">
+										<article class="article">
 											<p>
 												I am a computer science student based at Lille, France who loves to discover stuff.
 											</p>
@@ -270,13 +272,13 @@
 								</div>
 							</div>
 						</section>
-						<section id="section-08" class="section animation">
+						<section id="section-08" class="section">
 							<div class="section-body">
-								<h2 class="section-title  animation-item-1">Projects</h2>
-								<div class="row animation-translate animation-item-2">
+								<h2 class="section-title">Projects</h2>
+								<div class="row">
 									<div class="col-12 col-md-4">
 										<a class="card" href="#modal-project-1" data-toggle="modal">
-											<img class="card-img-top" src="img/3DDemo.png" alt="Nanovo">
+											<img class="card-img-top" src="img/3DDemo.png" alt="ModelPLY Reader DEMO">
 											<div class="card-body">
 												<h3 class="card-title">3D Model viewer</h3>
 												<h4 class="card-subtitle">PLY visualizer</h4>
