French version + rework

--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
 	<!-- Linux, centres d'interet -->
 	<meta charset="UTF-8">
@@ -7,18 +7,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<meta name="description" content="Tanguy Dessoly's Web Resume.">
-	<meta name="keywords" content="Tanguy, Dessoly, Informatique, Développeur, dev, CV, Étudiant, Stage">
+	<meta name="keywords" content="Tanguy, Dessoly, Computer, Science, Developer, dev, Resume, Student, Internship">
 	<meta name="author" content="Tanguy Dessoly">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
 
-	<link href="css/preview.css" rel="stylesheet">
+	<link href="../css/preview.css" rel="stylesheet">
 
-	<link href="css/white-red.css" rel="stylesheet">
+	<link href="../css/white-red.css" rel="stylesheet">
 
-	<script src="js/all.js"></script>
+	<script src="../js/all.js"></script>
 	<script src="https://kit.fontawesome.com/75627516d7.js" crossorigin="anonymous"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSQCXL9P93"></script>
@@ -36,7 +36,7 @@
 	<header class="header">
 		<div class="container-fluid-limited d-flex align-items-center justify-content-between">
 			<a href="" class="header-brand hidden-mobile"><h3 class="timeline-title">Tanguy Dessoly</h3></a>
-			<a href="CV.pdf" class="btn btn-primary hidden-mobile" download="DESSOLY Tanguy | CV">Télécharger mon CV</a>
+			<a href="../CV.pdf" class="btn btn-primary hidden-mobile" download="DESSOLY Tanguy | CV">Download resume</a>
 			<!-- <img src="img/logo_b.svg" data-light-src="img/logo.svg" data-dark-src="img/logo_b.svg"> -->
 			<button class="sections-nav-toggler" aria-label="Toggle navigation">
 				<span class="sections-nav-toggler-bar"></span>
@@ -50,22 +50,22 @@
 		<ul id="sections-nav" class="nav sections-nav sections-nav-animated">
 			
 			<li class="sections-nav-item">
-				<a href="CV.pdf" class="btn btn-primary hidden-computer" download="DESSOLY Tanguy | CV">Télécharger<br>mon CV</a>
+				<a href="../CV.pdf" class="btn btn-primary hidden-computer" download="DESSOLY Tanguy | CV">Download<br>resume</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-01" class="nav-link sections-nav-link goto-section active">Début</a>
+				<a href="#section-01" class="nav-link sections-nav-link goto-section active">Top</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-02" class="nav-link sections-nav-link goto-section">À propos de moi</a>
+				<a href="#section-02" class="nav-link sections-nav-link goto-section">About me</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-04" class="nav-link sections-nav-link goto-section">Compétences</a>
+				<a href="#section-04" class="nav-link sections-nav-link goto-section">Skills</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-06" class="nav-link sections-nav-link goto-section">Parcours</a>
+				<a href="#section-06" class="nav-link sections-nav-link goto-section">Resume</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-08" class="nav-link sections-nav-link goto-section">Projets</a>
+				<a href="#section-08" class="nav-link sections-nav-link goto-section">Projects</a>
 			</li>
 			<li class="sections-nav-item">
 				<a href="#section-10" class="nav-link sections-nav-link goto-section">Contact</a>
@@ -88,9 +88,9 @@
 					<section id="section-01" class="section section-sub-header animation interaction-in">
 						<div class="section-body">
 							<div class="jumbotron jumbotron-fluid pt-6 pt-lg-8 pb-0 mb-0">
-								<img src="./img/avatar.png" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
+								<img src="../img/avatar.png" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
 								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">Tanguy<br>Dessoly</h1>
-								<p class="lead display-animated display-animated-in animation-translate animation-item-3">ETUDIANT EN INFORMATIQUE</p>
+								<p class="lead display-animated display-animated-in animation-translate animation-item-3">COMPUTER SCIENCE STUDENT</p>
 							</div>
 						</div>
 
@@ -101,16 +101,16 @@
 							<div class="section-body">
 								<div class="row">
 									<div class="col col-xl-10">
-										<h2 class="section-title animation-item-1">À propos de moi</h2>
+										<h2 class="section-title animation-item-1">About me</h2>
 										<article class="article">
 											<p>
-												Je suis un étudiant en informatique situé à Lille, France qui aime décrouvrir toutes sortes de choses.
+												I am a computer science student based at Lille, France who loves to discover stuff.
 											</p>
 											<p>
-												Je suis passioné par l'informatique depuis 2009, depuis que j'ai eu les mains sur un clavier, à l'âge de 7 ans.
+												I have been passionate about this field since 2009, aged 7, when I've got my hands on my first personnal computer.
 											</p>
 											<p>
-												J'étudie actuellement à <a href="https://www.iut-a.univ-lille.fr/en/home/#">l'Institut Universitaire de Technologie 'A' de Lille</a>,&nbsp;<a href="https://www.google.com/maps/@50.6421647,3.1110974,12z">France.</a>
+												I currently study at <a href="https://www.iut-a.univ-lille.fr/en/home/#">Institut Universitaire de Technologie 'A' of Lille</a>,&nbsp;<a href="https://www.google.com/maps/@50.6421647,3.1110974,12z">France.</a>
 											</p> <!-- change color p a  -->
 										</article>
 									</div>
@@ -119,7 +119,7 @@
 						</section>
 						<section id="section-04" class="section animation">
 							<div class="section-body">
-								<h2 class="section-title  animation-item-1">Compétences</h2>
+								<h2 class="section-title  animation-item-1">Skills</h2>
 								<h3 class="animation-item-1">Hard Skills</h3>
 								<div class="row animation-translate animation-item-2">
 									<div class="col-12 col-md-6">
@@ -178,37 +178,37 @@
 								<div class="animation-translate animation-item-2">
 									<h3 class="tab animation-item-2">Soft Skills</h3> <!-- se lance en même temps, pas cool  -->
 									<div class="counter mb-6 mb-lg-0">
-										<span>TRAVAIL D'EQUIPE</span><br>
-										<span>FLEXIBLE</span><br>
-										<span>MANAGEMENT DU TEMPS</span><br>
-										<span>ADAPTABILITE</span><br>
+										<span>TEAMWORK</span><br>
+										<span>FLEXIBILITY</span><br>
+										<span>TIME MANAGEMENT</span><br>
+										<span>ADAPTABILITY</span><br>
 										<span>COMMUNICATION</span><br>
-										<span>ECRITURE</span><br>
-										<span>ECOUTE</span><br>
-										<span>ETHIQUE DU TRAVAIL</span><br>
+										<span>WRITING</span><br>
+										<span>LISTENING</span><br>
+										<span>WORK ETHIC</span><br>
 									</div>
 									
-									<h3 class="tab animation-item-3">Langages</h3>
+									<h3 class="tab animation-item-3">Languages</h3>
 									<div class="counter mb-6 mb-lg-0">
-										<span class="counter-label">Français</span>
-										<span>LANGUE MATERNELLE</span>
+										<span class="counter-label">French</span>
+										<span>MOTHER TONGUE</span>
 									</div>
 									<br>
 									<div class="counter mb-6 mb-lg-0">
-										<span class="counter-label">Englais</span>
-										NIVEAU C<span data-counter-from="1" data-counter-to="2">2</span>
+										<span class="counter-label">English</span>
+										C<span data-counter-from="1" data-counter-to="2">2</span> LEVEL
 									</div>
 									<br>
 									<div class="counter mb-6 mb-lg-0">
-										<span class="counter-label">Allemand</span>
-										<span>RUDIMENTAIRE</span>
+										<span class="counter-label">German</span>
+										<span>RUDIMENTARY</span>
 									</div>
 								</div>
 							</div>
 						</section>
 						<section id="section-06" class="section animation">
 							<div class="section-body">
-								<h2 class="section-title  animation-item-1">PARCOURS</h2>
+								<h2 class="section-title  animation-item-1">Resume</h2>
 								<div class="timeline-animated">
 									<div class="container">
 										<div class="row">
@@ -218,10 +218,10 @@
 											<div class="col-lg-12 padding">
 												<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 													<li class="nav-item borderFade" role="presentation">
-														<a class="nav-link active" data-toggle="pill" data-target="#pills-education" role="tab" aria-controls="pills-education" aria-selected="true">Scolaire</a>
+														<a class="nav-link active" data-toggle="pill" data-target="#pills-education" role="tab" aria-controls="pills-education" aria-selected="true">Education</a>
 													</li>
 													<li class="nav-item borderFade" role="presentation">
-														<a class="nav-link" data-toggle="pill" data-target="#pills-experience" role="tab" aria-controls="pills-experience" aria-selected="false">Professionel</a>
+														<a class="nav-link" data-toggle="pill" data-target="#pills-experience" role="tab" aria-controls="pills-experience" aria-selected="false">Experience</a>
 													</li>
 												</ul>
 												<div class="tab-content" id="pills-tabContent">
@@ -240,7 +240,7 @@
 																	<p class="year">2017-2020</p>
 																</div>
 																<div class="col-md-9 col-xs-12">
-																	<h5>Baccalauréat Scientifique-Option Informatique</h5>
+																	<h5>Baccalauréat Scientifique-CS Option</h5>
 																	<p>Lycée Publique A.Ribot</p>
 																	<hr>
 																</div>
@@ -251,14 +251,14 @@
 														<div class="container">
 															<div class="row timeline">
 																<div class="col-md-12 col-xs-12 timeline-item">
-																	<span class="timeline-date">2020&nbsp;–&nbsp;aujourd'hui</span>
-																	<h3 class="timeline-title">Etudiant en informatique</h3>
-																	<p class="timeline-text">Différents projets personnels/scolaires</p>
-																</div>
+																	<span class="timeline-date">2020&nbsp;–&nbsp;now</span>
+																	<h3 class="timeline-title">CS Student</h3>
+																	<p class="timeline-text">Multiple School/Personnal projects</p>
+																</div><br>
 																<div class="col-md-12 col-xs-12 timeline-item">
-																	<span class="timeline-date">passé&nbsp;-&nbsp;2020</span>
-																	<h3 class="timeline-title">Plusieurs expériences professionnelles sans rapport avec l'informatique</h3>
-																	<p class="timeline-text">Découverte du monde professionnel</p>
+																	<span class="timeline-date">past&nbsp;-&nbsp;2020</span>
+																	<h3 class="timeline-title">Multiple internships non CS-related</h3>
+																	<p class="timeline-text">Learning my way in the professional world</p>
 																</div>
 															</div>
 														</div>
@@ -272,23 +272,23 @@
 						</section>
 						<section id="section-08" class="section">
 							<div class="section-body">
-								<h2 class="section-title">Projets</h2>
+								<h2 class="section-title">Projects</h2>
 								<div class="row">
 									<div class="col-12 col-md-4">
 										<a class="card" href="#modal-project-1" data-toggle="modal">
-											<img class="card-img-top" src="img/3DDemo.png" alt="ModelPLY Reader DEMO">
+											<img class="card-img-top" src="../img/3DDemo.png" alt="ModelPLY Reader DEMO">
 											<div class="card-body">
-												<h3 class="card-title">Visualisateur de modèles 3D</h3>
-												<h4 class="card-subtitle">PLY viewer</h4>
+												<h3 class="card-title">3D Model viewer</h3>
+												<h4 class="card-subtitle">PLY visualizer</h4>
 												<p class="card-tags">Java — JavaFX — FXML — SceneBuilder</p>
 											</div>
 										</a>
 									</div>
 									<div class="col-12 col-md-4">
 										<a class="card" href="#modal-project-1" data-toggle="modal">
-											<img class="card-img-top" src="img/FSoG.png">
+											<img class="card-img-top" src="../img/FSoG.png">
 											<div class="card-body">
-												<h3 class="card-title">D'autres à venir</h3>
+												<h3 class="card-title">More to come</h3>
 											</div>
 										</a>
 									</div>
@@ -301,14 +301,14 @@
 								<div class="row mb-10 animation-translate animation-item-2">
 									<div class="col-12 col-md-4">
 										<div class="contact">
-											<strong class="contact-label">Rester en contact</strong>
+											<strong class="contact-label">Stay in touch</strong>
 											<i class="fa fa-phone fa-flip-horizontal" aria-hidden="true"></i><a href="tel:+33695237569"> +33 6 95 23 75 69</a><br>
 											&#8239;<i class="fa fa-map-marker" aria-hidden="true"></i><a href="https://www.google.com/maps/@50.6421647,3.1110974,12z" id="section-11">&nbsp;Lille, France</a><br>
 										</div>
 									</div>
 									<div class="col-12 col-md-4">
 										<div class="contact">
-											<strong class="contact-label">Réseaux</strong>
+											<strong class="contact-label">Social</strong>
 											<i class="fa fa-linkedin-square" aria-hidden="true"></i><a href="https://fr.linkedin.com/in/tanguydessoly"> LinkedIn</a><br>
 											<i class="fa fa-github-square" aria-hidden="true"></i><a href="https://github.com/TanguyDessoly"> GitHub</a>
 										</div>
@@ -316,30 +316,30 @@
 								</div>
 								<div class="row">
 									<div class="col-12 col-xl-9">
-										<h3 class="section-subtitle animation-translate animation-item-3">&nbsp;<i class="fa fa-envelope" aria-hidden="true"></i> Laisser un message <i class="fa fa-envelope" aria-hidden="true"></i></h3>
+										<h3 class="section-subtitle animation-translate animation-item-3">&nbsp;<i class="fa fa-envelope" aria-hidden="true"></i> Leave a message <i class="fa fa-envelope" aria-hidden="true"></i></h3>
 										<form action="https://formspree.io/f/xleayorj" method="POST" class="needs-validation animation-translate animation-item-4" novalidate>
 											<div class="row">
 												<div class="col-12 col-md-6">
 													<div class="form-group">
-														<label for="contact-form-name">Nom</label>
+														<label for="contact-form-name">Name</label>
 														<input type="text" class="form-control" name="Name" id="contact-form-name" placeholder="John Doe" required/>
-														<div class="invalid-feedback">Veuillez entrer votre nom.</div>
+														<div class="invalid-feedback">Please enter your name.</div>
 													</div>
 												</div>
 												<div class="col-12 col-md-6">
 													<div class="form-group">
 														<label for="contact-form-name">E-mail</label>
-														<input type="email" class="form-control" name="E-mail" id="contact-form-email" placeholder="john.doe@domaine.com" required/>
-														<div class="invalid-feedback">Veuillez entrer un e-mail valide.</div>
+														<input type="email" class="form-control" name="E-mail" id="contact-form-email" placeholder="john.doe@domain.com" required/>
+														<div class="invalid-feedback">Please enter a valid e-mail address.</div>
 													</div>
 												</div>
 											</div>
 											<div class="form-group">
 												<label for="contact-form-message">Message</label>
-												<textarea class="form-control" name="Message" id="contact-form-message" placeholder="Hey ! Ton site web est vraiment sympathique !" rows="5" required></textarea>
-												<div class="invalid-feedback">Veuillez taper votre message.</div>
+												<textarea class="form-control" name="Message" id="contact-form-message" placeholder="Hey ! Your website is so cool !" rows="5" required></textarea>
+												<div class="invalid-feedback">Please type a message.</div>
 											</div>
-											<button type="submit" class="btn btn-primary">Envoyer</button>
+											<button type="submit" class="btn btn-primary">Send</button>
 										</form>
 									</div>
 								</div>
@@ -349,7 +349,7 @@
 				</div>
 			</div>
 		</div>
-		<footer>© 2021 Tanguy Dessoly - Tout droits réservés</footer>
+		<footer>© 2021 Tanguy Dessoly - All Rights Reserved</footer>
 	</main>
 	<!-- Modals -->
 	<div id="modal-project-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal-project-1" aria-hidden="true">
@@ -364,21 +364,21 @@
 				<div class="modal-body">
 					<article class="article">
 						<div class="article-header">
-							<h2 class="article-title">Visualisateur de modèles 3D</h2>
-							<h3 class="article-subtitle">PLY viewer</h3>
+							<h2 class="article-title">3D Model viewer</h2>
+							<h3 class="article-subtitle">PLY visualizer</h3>
 							<p class="article-tags">Java — JavaFX — FXML — SceneBuilder</p>
 						</div>
 						<div class="row flex-column-reverse flex-lg-row">
 							<div class="col-12 col-lg-6">
 								<p>
-									Projet universitaire, en cours;<br>
-									par équipe de 4;<br>
+									University project, ongoing;<br>
+									4-members team;<br>
 									<br>
-									Visualisateur de modèles 3D en format PLY avec différentes possibilités (homotétie, rotation, translation, lumière, lissage etc...).<br>
+									Visualizer with different view and utils on PLY 3D models.<br>
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
-								<img class="img-fluid mb-10" src="img/3DDemo.png" alt="3DDEmo">
+								<img class="img-fluid mb-10" src="../img/3DDemo.png" alt="3DDEmo">
 							</div>
 						</div>
 					</article>
@@ -390,7 +390,7 @@
 		<!-- <a href="#theme-white" class="preview-theme preview-color-white" title="Select theme" data-toggle="tooltip" data-theme="css/white.css" data-theme-bg="light"></a>
 		<a href="#theme-white-red" class="preview-theme preview-color-white-red" title="Select theme" data-toggle="tooltip" data-theme="css/white-red.css" data-theme-bg="dark"></a>
 		<a href="#theme-red" class="preview-theme preview-color-red" title="Select theme" data-toggle="tooltip" data-theme="css/red.css" data-theme-bg="dark"></a> -->
-		<a href="EN-us/index.html" class="preview-language en-flag" title="Show english version" data-toggle="tooltip" ></a>
+		<a href="../index.html" class="preview-language fr-flag" title="Voir en français" data-toggle="tooltip" ></a>
 		 <!-- fait de la merde sur la police
 		 </div> -->
 		</body>
