--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -390,7 +390,7 @@
 		<!-- <a href="#theme-white" class="preview-theme preview-color-white" title="Select theme" data-toggle="tooltip" data-theme="css/white.css" data-theme-bg="light"></a>
 		<a href="#theme-white-red" class="preview-theme preview-color-white-red" title="Select theme" data-toggle="tooltip" data-theme="css/white-red.css" data-theme-bg="dark"></a>
 		<a href="#theme-red" class="preview-theme preview-color-red" title="Select theme" data-toggle="tooltip" data-theme="css/red.css" data-theme-bg="dark"></a> -->
-		<a href="../index.html" class="preview-language fr-flag" title="Voir en français" data-toggle="tooltip" ></a>
+		<a href="../" class="preview-language fr-flag" title="Voir en français" data-toggle="tooltip" ></a>
 		 <!-- fait de la merde sur la police
 		 </div> -->
 		</body>
