--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 						<div class="row flex-column-reverse flex-lg-row">
 							<div class="col-12 col-lg-6">
 								<p>
+									<!-- TODO Lien github -->
 									Projet universitaire, en cours;<br>
 									par équipe de 4;<br>
 									<br>
@@ -390,7 +391,7 @@
 		<!-- <a href="#theme-white" class="preview-theme preview-color-white" title="Select theme" data-toggle="tooltip" data-theme="css/white.css" data-theme-bg="light"></a>
 		<a href="#theme-white-red" class="preview-theme preview-color-white-red" title="Select theme" data-toggle="tooltip" data-theme="css/white-red.css" data-theme-bg="dark"></a>
 		<a href="#theme-red" class="preview-theme preview-color-red" title="Select theme" data-toggle="tooltip" data-theme="css/red.css" data-theme-bg="dark"></a> -->
-		<a href="EN-us/index.html" class="preview-language en-flag" title="Show english version" data-toggle="tooltip" ></a>
+		<a href="EN-us" class="preview-language en-flag" title="Show english version" data-toggle="tooltip" ></a>
 		 <!-- fait de la merde sur la police
 		 </div> -->
 		</body>
