--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -285,10 +285,20 @@
 										</a>
 									</div>
 									<div class="col-12 col-md-4">
-										<a class="card" href="#modal-project-1" data-toggle="modal">
-											<img class="card-img-top" src="../img/FSoG.png">
+										<a class="card" href="#modal-project-2" data-toggle="modal">
+											<img class="card-img-top" src="../img/FSoG-2.png">
 											<div class="card-body">
-												<h3 class="card-title">More to come</h3>
+												<h3 class="card-title">Printing in B/W utility</h3>
+												<h4 class="card-subtitle">Fifty Shades of Grey</h4>
+												<p class="card-tags">Java — JavaFX</p>
+											</div>
+										</a>
+									</div>
+									<div class="col-12 col-md-4">
+										<a class="card" href="" data-toggle="modal">
+											<img class="card-img-top" src="../img/MoreToCome.png">
+											<div class="card-body">
+												<h3 class="card-title">More to come...</h3>
 											</div>
 										</a>
 									</div>
@@ -374,11 +384,49 @@
 									University project, ongoing;<br>
 									4-members team;<br>
 									<br>
-									Visualizer with different view and utils on PLY 3D models.<br>
+									Visualizer with different view and utils (light, rotation, rectilinear translation, smoothing) on PLY 3D models.<br>
+									I also implemented an operation file explorer, complete with error management.
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="../img/3DDemo.png" alt="3DDEmo">
+							</div>
+						</div>
+					</article>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="modal-project-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal-project-2" aria-hidden="true">
+		<div class="modal-dialog modal-fluid">
+			<div class="modal-content">
+				<div class="modal-header">
+					&nbsp;
+					<button type="button" class="modal-close" data-dismiss="modal" aria-label="Close">
+						<span class="d-none">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<article class="article">
+						<div class="article-header">
+							<h2 class="article-title">Color utility for printing</h2>
+							<h3 class="article-subtitle">Fifty Shades of Grey</h3>
+							<p class="article-tags">Java — JavaFX</p>
+						</div>
+						<div class="row flex-column-reverse flex-lg-row">
+							<div class="col-12 col-lg-6">
+								<p>
+									<!-- TODO Lien github -->
+									University project, finished;<br>
+									2-members team;<br>
+									<br>
+									Utility that help you find colors that won't be the same shade of grey when you print the document !<br>
+									Comes with an export function and intuitive controls.
+								</p>
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="../img/FSoG.png" alt="FSoG">
+								<img class="img-fluid mb-10" src="../img/FSoG-2.png" alt="FSoG-2">
 							</div>
 						</div>
 					</article>
