--- a/index.html
+++ b/index.html
@@ -285,10 +285,20 @@
 										</a>
 									</div>
 									<div class="col-12 col-md-4">
-										<a class="card" href="#modal-project-1" data-toggle="modal">
-											<img class="card-img-top" src="img/FSoG.png">
+										<a class="card" href="#modal-project-2" data-toggle="modal">
+											<img class="card-img-top" src="img/FSoG-2.png">
 											<div class="card-body">
-												<h3 class="card-title">D'autres à venir</h3>
+												<h3 class="card-title">Utilitaire de nuances de gris pour l'impression en noir et blanc</h3>
+												<h4 class="card-subtitle">Fifty Shades of Grey</h4>
+												<p class="card-tags">Java — JavaFX</p>
+											</div>
+										</a>
+									</div>
+									<div class="col-12 col-md-4">
+										<a class="card" href="" data-toggle="modal">
+											<img class="card-img-top" src="img/MoreToCome.png">
+											<div class="card-body">
+												<h3 class="card-title">D'autres à venir...</h3>
 											</div>
 										</a>
 									</div>
@@ -376,10 +386,48 @@
 									par équipe de 4;<br>
 									<br>
 									Visualisateur de modèles 3D en format PLY avec différentes possibilités (homotétie, rotation, translation, lumière, lissage etc...).<br>
+									Possède également un explorateur de fichiers que j'ai réalisé seul, très efficace et rapide, avec gestion des erreurs en lien avec le projet.
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="img/3DDemo.png" alt="3DDEmo">
+							</div>
+						</div>
+					</article>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="modal-project-2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal-project-2" aria-hidden="true">
+		<div class="modal-dialog modal-fluid">
+			<div class="modal-content">
+				<div class="modal-header">
+					&nbsp;
+					<button type="button" class="modal-close" data-dismiss="modal" aria-label="Close">
+						<span class="d-none">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<article class="article">
+						<div class="article-header">
+							<h2 class="article-title">Utilitaire de nuances de gris pour l'impression en noir et blanc</h2>
+							<h3 class="article-subtitle">Fifty Shades of Grey</h3>
+							<p class="article-tags">Java — JavaFX</p>
+						</div>
+						<div class="row flex-column-reverse flex-lg-row">
+							<div class="col-12 col-lg-6">
+								<p>
+									<!-- TODO Lien github -->
+									Projet universitaire, terminé;<br>
+									en duo;<br>
+									<br>
+									Outil d'aide au choix de couleurs en fonction de leur niveau de gris en vue d'une impression<br>
+									Ne vous êtes vous jamais retrouvé avec un diagramme incompréhensible à cause des gris de même nuance ? Cet outil a pour but de vous aider, avec une fonction d'export et de contrôles intuitifs !
+								</p>
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="img/FSoG.png" alt="FSoG">
+								<img class="img-fluid mb-10" src="img/FSoG-2.png" alt="FSoG-2">
 							</div>
 						</div>
 					</article>
