--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<section id="section-01" class="section section-sub-header animation interaction-in">
 						<div class="section-body">
 							<div class="jumbotron jumbotron-fluid pt-6 pt-lg-8 pb-0 mb-0">
-								<img src="./img/avatar.png" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
+								<img rel="image_src" src="./img/avatar.png" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
 								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">Tanguy<br>Dessoly</h1>
 								<p class="lead display-animated display-animated-in animation-translate animation-item-3">ETUDIANT EN INFORMATIQUE</p>
 							</div>
