--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -386,7 +386,15 @@
 									<br>
 									Visualizer with different view and utils (light, rotation, rectilinear translation, smoothing) on PLY 3D models.<br>
 									I also implemented an operation file explorer, complete with error management.
+									We made a light source to improve the quality of render.
+									Design patterns : MVC - nullObject - Observer/Observable - Singleton
 								</p>
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="../img/Shoe.png" alt="Shoe">
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="../img/Apple.png" alt="3DDEmo">
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="../img/3DDemo.png" alt="3DDEmo">
