--- a/index.html
+++ b/index.html
@@ -382,12 +382,20 @@
 							<div class="col-12 col-lg-6">
 								<p>
 									<!-- TODO Lien github -->
-									Projet universitaire, en cours;<br>
+									Projet universitaire, terminé;<br>
 									par équipe de 4;<br>
 									<br>
 									Visualisateur de modèles 3D en format PLY avec différentes possibilités (homotétie, rotation, translation, lumière, lissage etc...).<br>
 									Possède également un explorateur de fichiers que j'ai réalisé seul, très efficace et rapide, avec gestion des erreurs en lien avec le projet.
+									Apport d'une lumière pour un meilleur rendu des modèles, contrôleur horloge
+									Patrons de conception : MVC - nullObject - Observer/Observable - Singleton
 								</p>
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="img/Shoe.png" alt="3DDEmo">
+							</div>
+							<div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="img/Apple.png" alt="Apple">
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="img/3DDemo.png" alt="3DDEmo">
