--- a/EN-us/index.html
+++ b/EN-us/index.html
@@ -107,7 +107,7 @@
 												I am a computer science student based at Lille, France who loves to discover stuff.
 											</p>
 											<p>
-												I have been passionate about this field since 2009, aged 7, when I've got my hands on my first personnal computer.
+												I have been passionate about this field since I've got my hands on my first personnal computer, and since this day, always wanted to learn more about computer science and programming.
 											</p>
 											<p>
 												I currently study at <a href="https://www.iut-a.univ-lille.fr/en/home/#">Institut Universitaire de Technologie 'A' of Lille</a>,&nbsp;<a href="https://www.google.com/maps/@50.6421647,3.1110974,12z">France.</a>
@@ -381,20 +381,20 @@
 						<div class="row flex-column-reverse flex-lg-row">
 							<div class="col-12 col-lg-6">
 								<p>
-									University project, ongoing;<br>
+									University project, done;<br>
 									4-members team;<br>
 									<br>
 									Visualizer with different view and utils (light, rotation, rectilinear translation, smoothing) on PLY 3D models.<br>
-									I also implemented an operation file explorer, complete with error management.
-									We made a light source to improve the quality of render.
-									Design patterns : MVC - nullObject - Observer/Observable - Singleton
+									I also implemented an operation file explorer, complete with error management.<br>
+									We made a light source to improve the quality of render.<br><br>
+									Design patterns : <br>MVC - nullObject - Observer/Observable - Singleton<br>
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="../img/Shoe.png" alt="Shoe">
 							</div>
 							<div class="col-12 col-lg-6">
-								<img class="img-fluid mb-10" src="../img/Apple.png" alt="3DDEmo">
+								<img class="img-fluid mb-10" src="../img/Apple.png" alt="Apple">
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="../img/3DDemo.png" alt="3DDEmo">
@@ -425,7 +425,7 @@
 							<div class="col-12 col-lg-6">
 								<p>
 									<!-- TODO Lien github -->
-									University project, finished;<br>
+									University project, done;<br>
 									2-members team;<br>
 									<br>
 									Utility that help you find colors that won't be the same shade of grey when you print the document !<br>
