--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 												Je suis un étudiant en informatique situé à Lille, France qui aime décrouvrir toutes sortes de choses.
 											</p>
 											<p>
-												Je suis passioné par l'informatique depuis 2009, depuis que j'ai eu les mains sur un clavier, à l'âge de 7 ans.
+												Je suis passionné par l'informatique depuis que j'ai eu les mains sur un clavier, et depuis, ne cherche qu'à en savoir plus sur le monde numérique.
 											</p>
 											<p>
 												J'étudie actuellement à <a href="https://www.iut-a.univ-lille.fr/en/home/#">l'Institut Universitaire de Technologie 'A' de Lille</a>,&nbsp;<a href="https://www.google.com/maps/@50.6421647,3.1110974,12z">France.</a>
@@ -386,13 +386,13 @@
 									par équipe de 4;<br>
 									<br>
 									Visualisateur de modèles 3D en format PLY avec différentes possibilités (homotétie, rotation, translation, lumière, lissage etc...).<br>
-									Possède également un explorateur de fichiers que j'ai réalisé seul, très efficace et rapide, avec gestion des erreurs en lien avec le projet.
-									Apport d'une lumière pour un meilleur rendu des modèles, contrôleur horloge
-									Patrons de conception : MVC - nullObject - Observer/Observable - Singleton
+									Possède également un explorateur de fichiers que j'ai réalisé seul, très efficace et rapide, avec gestion des erreurs en lien avec le projet.<br>
+									Apport d'une lumière pour un meilleur rendu des modèles, contrôleur horloge<br><br>
+									Patrons de conception :<br>MVC - nullObject - Observer/Observable - Singleton<br>
 								</p>
 							</div>
 							<div class="col-12 col-lg-6">
-								<img class="img-fluid mb-10" src="img/Shoe.png" alt="3DDEmo">
+								<img class="img-fluid mb-10" src="img/Shoe.png" alt="Shoe">
 							</div>
 							<div class="col-12 col-lg-6">
 								<img class="img-fluid mb-10" src="img/Apple.png" alt="Apple">
