--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
-										<strong class="progress-label">JSP</strong>
+										<strong class="progress-label">JS</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
