--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!-- Si vous voulez en savoir plus sur mes connaissances Web, venez me parler plutôt que d'étudier comment ce site peu travaillé est développé :) -->
 <head>
 	<!-- Linux, centres d'interet -->
 	<meta charset="UTF-8">
@@ -104,6 +105,12 @@
 										<h2 class="section-title animation-item-1">À propos de moi</h2>
 										<article class="article">
 											<p>
+												Étudiant alternant en informatique à Lille, France
+											</p>
+											<p>
+												Chef de projet - Développement Web - Machine Learning
+											</p>
+											<!-- <p>
 												Je suis un étudiant en informatique situé à Lille, France qui aime décrouvrir toutes sortes de choses.
 											</p>
 											<p>
@@ -111,7 +118,7 @@
 											</p>
 											<p>
 												J'étudie actuellement à <a href="https://www.iut-a.univ-lille.fr/en/home/#">l'Institut Universitaire de Technologie 'A' de Lille</a>,&nbsp;<a href="https://www.google.com/maps/@50.6421647,3.1110974,12z">France.</a>
-											</p> <!-- change color p a  -->
+											</p> change color p a  -->
 										</article>
 									</div>
 								</div>
@@ -124,56 +131,56 @@
 								<div class="row animation-translate animation-item-2">
 									<div class="col-12 col-md-6">
 										<strong class="progress-label">Java</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-										<strong class="progress-label">JavaFX</strong>
+										</div> -->
+										<!-- <strong class="progress-label">JavaFX</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 										<strong class="progress-label">JEE</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">JS</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<!-- Ligne horizontale : WEB -->
-										<strong class="progress-label">HTML</strong>
+										<!-- <strong class="progress-label">HTML</strong>
 										<div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">Linux</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 									</div>
 									<div class="col-12 col-md-6">
 										<strong class="progress-label">SQL</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">GIT</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">C</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">Bash</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
+										</div> -->
 										<strong class="progress-label">CSS</strong>
-										<div class="progress progress-animated mb-9">
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-										<strong class="progress-label">Cobol</strong>
-										<div class="progress progress-animated mb-9">
+										</div> -->
+										<strong class="progress-label">Machine Learning</strong>
+										<!-- <div class="progress progress-animated mb-9">
 											<div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>									</div>
+										</div>									</div> -->
 									</div>
 									<div class="animation-translate animation-item-2">
 										<h3 class="tab animation-item-2">Soft Skills</h3> <!-- se lance en même temps, pas cool  -->
