--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 	<meta name="author" content="Tanguy Dessoly">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<link rel="icon" type="image/png" href="img/avatar.png">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
 
@@ -31,13 +33,14 @@
 		gtag('config', 'G-YSQCXL9P93');
 	</script>
 
-	<title>Tanguy Dessoly | Web Resume</title>	
+
+	<title>Tanguy Dessoly</title>	
 </head>
 <body class="with-header position-relative" data-spy="scroll" data-target="#sections-nav" data-offset="80">
 	<header class="header">
 		<div class="container-fluid-limited d-flex align-items-center justify-content-between">
 			<a href="" class="header-brand hidden-mobile"><h3 class="timeline-title">Tanguy Dessoly</h3></a>
-			<a href="CV.pdf" class="btn btn-primary hidden-mobile" download="DESSOLY Tanguy | CV">Télécharger mon CV</a>
+			<!-- <a href="CV.pdf" class="btn btn-primary hidden-mobile" download="DESSOLY Tanguy | CV">Télécharger mon CV</a> -->
 			<!-- <img src="img/logo_b.svg" data-light-src="img/logo.svg" data-dark-src="img/logo_b.svg"> -->
 			<button class="sections-nav-toggler" aria-label="Toggle navigation">
 				<span class="sections-nav-toggler-bar"></span>
@@ -57,7 +60,7 @@
 				<a href="#section-01" class="nav-link sections-nav-link goto-section active">Début</a>
 			</li>
 			<li class="sections-nav-item">
-				<a href="#section-02" class="nav-link sections-nav-link goto-section">À propos de moi</a>
+				<a href="#section-02" class="nav-link sections-nav-link goto-section">À propos</a>
 			</li>
 			<li class="sections-nav-item">
 				<a href="#section-04" class="nav-link sections-nav-link goto-section">Compétences</a>
@@ -101,8 +104,11 @@
 							<div class="jumbotron jumbotron-fluid pt-6 pt-lg-8 pb-0 mb-0">
 								<img rel="image_src" src="./img/avatar.png" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
 								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">Tanguy<br>Dessoly</h1>
-								<p class="lead display-animated display-animated-in animation-translate animation-item-3">ÉTUDIANT EN INFORMATIQUE</p>
 							</div>
+								<p class="lead display-animated display-animated-in animation-translate animation-item-3">SITE EN COURS DE RÉALISATION...</p>
+								
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 						</div>
 					</section>
 
@@ -122,13 +128,13 @@
 							<div class="section-body">
 								<div class="row">
 									<div class="col col-xl-10">
-										<h2 class="section-title animation-item-1">À propos de moi</h2>
+										<h2 class="section-title animation-item-1">À propos</h2>
 										<article class="article">
 											<p>
 												Étudiant alternant en informatique à Lille, France
 											</p>
 											<p>
-												Chef de projet - Développement Web - Machine Learning
+												Lead de projet - Développement - Data - Machine Learning 
 											</p>
 											<!-- <p>
 												Je suis un étudiant en informatique situé à Lille, France qui aime décrouvrir toutes sortes de choses.
@@ -388,7 +394,7 @@
 								<div class="row">
 									<div class="col-12 col-md-4">
 										<a class="card" href="#modal-photo-1" data-toggle="modal">
-											<img class="card-img-top" src="img/Marie/imageedit_9_3713203399.png" alt="Marie">
+											<img src="img/Marie/imageedit_9_3713203399.png" alt="Marie">
 											<div class="card-body">
 												<h3 class="card-title">Marie</h3>
 											</div>
@@ -396,7 +402,7 @@
 									</div>
 									<div class="col-12 col-md-4">
 										<a class="card" href="#modal-photo-2" data-toggle="modal">
-											<img class="card-img-top" src="img/Houches/imageedit_8_3749619147.jpg">
+											<img src="img/Houches/imageedit_8_3749619147.jpg">
 											<div class="card-body">
 												<h3 class="card-title">Houches</h3>
 											</div>
@@ -578,40 +584,97 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					&nbsp;
-					<button type="button" class="modal-close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="modal-close" data-dismiss="modal" aria-label="Close" style="z-index: 1000;">
 						<span class="d-none">&times;</span>
 					</button>
 				</div>
+				
+				<a class="carousel-control-prev"  onclick="javascript:$('#carousel').carousel('prev');" role="button" data-slide="prev" style="width: 50%; left: 0;">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
 				<div id="carousel" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
+					<ol class="carousel-indicators" style="z-index: 1000;">
 						<li data-target="#carousel" data-slide-to="0" class="active"></li>
 						<li data-target="#carousel" data-slide-to="1"></li>
+						<li data-target="#carousel" data-slide-to="2"></li>
+						<li data-target="#carousel" data-slide-to="3"></li>
+						<li data-target="#carousel" data-slide-to="4"></li>
+						<li data-target="#carousel" data-slide-to="5"></li>
+						<li data-target="#carousel" data-slide-to="6"></li>
+						<li data-target="#carousel" data-slide-to="7"></li>
+						<li data-target="#carousel" data-slide-to="8"></li>
+						<li data-target="#carousel" data-slide-to="9"></li>
+						<li data-target="#carousel" data-slide-to="10"></li>
+						<li data-target="#carousel" data-slide-to="11"></li>
+						<li data-target="#carousel" data-slide-to="12"></li>
+						<li data-target="#carousel" data-slide-to="13"></li>
+						<li data-target="#carousel" data-slide-to="14"></li>
+						<li data-target="#carousel" data-slide-to="15"></li>
+						<li data-target="#carousel" data-slide-to="16"></li>
+						<li data-target="#carousel" data-slide-to="17"></li>
 					</ol>
 					<div class="carousel-item active">
-						<img class="d-block mx-auto" src="img/Marie/IMG_4564-1-3.jpg" alt="First slide" style="max-width: 1200px; max-height: 800px;">
+						<img class="d-block mx-auto" src="img/Marie/IMG_4564-1-3.jpg" style="max-width: 1200px; max-height: 800px;">
 					</div>
 					<div class="carousel-item">
-						<img class="d-block mx-auto" src="img/Marie/imageedit_5_2549573811.png" alt="Second slide" style="max-width: 1200px; max-height: 800px;">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3629-1-8.jpg" style="max-width: 1200px; max-height: 800px;">
 					</div>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img class="d-block mx-auto" src="img/Marie/IMG_4564-1-3.jpg" alt="First slide" style="max-width: 1200px; max-height: 800px;">
-						</div>
-						<div class="carousel-item">
-							<img class="d-block mx-auto" src="img/Marie/imageedit_5_2549573811.png" alt="Second slide" style="max-width: 1200px; max-height: 800px;">
-						</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3655-2-.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3676-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3688-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3689-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3690-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3691-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3705-1-2.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3749-1-2.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3752-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3765-1.png" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3667-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3629-1-3.png" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_4345-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_4477-1.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_4520-1-2.jpg" style="max-width: 1200px; max-height: 800px;">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block mx-auto" src="img/Marie/IMG_3937-1-2.jpg" style="max-width: 1200px; max-height: 800px;">
 					</div>
 				</div>
+				<a class="carousel-control-next"  onclick="javascript:$('#carousel').carousel('next');" role="button" data-slide="next" style="width: 50%; right: 0;">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
 		</div>
-		<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
 	</div>
 
 	<div class="preview-themes">
